# event_log_mutator

./: .gitignore  Cargo.toml  README.md
derive-macros/: .gitignore  Cargo.toml
derive-macros/src/: _lib.rs  as_dir_name.rs  flatten_mutation_value.rs  lib.rs  utils.rs
example_pipelines/: complex_attribute_filter.toml  endpoint_filter.toml  simple_filter.toml  train_test_split.toml
src/: cli.rs  constants.rs  main.rs  mutation.rs  preset.rs  test_fixtures.rs  utils.rs
src/mutators/: activity_remover.rs  activity_rename.rs  activity_renamer.rs  attribute_remover.rs  attribute_retainer.rs  constant_activity.rs  event_swapper.rs  log_bootstrapper.rs  log_sampler.rs  log_splitter.rs  mod.rs  partial_order_creator.rs  remove_attribute.rs  service_time_adder.rs  service_time_multiplier.rs  service_time_mutator.rs  service_time_std_shifter.rs  sojourn_start_adder.rs
src/mutators/aux_mutators/: log_saver.rs  log_validator.rs  mod.rs
src/mutators/filters/: attribute_value_filter.rs  case_duration_filter.rs  endpoint_filter.rs  follower_filter.rs  mod.rs  trace_length_filter.rs  variant_support_filter.rs
src/parsing/: as_dir_name.rs  custom_serde.rs  dir_name_trait.rs  flatten_mutation_value_trait.rs  mod.rs  mutation_value.rs  parametrized_mutation_config.rs  parametrized_pipeline.rs
src/parsing/traits/: dir_name.rs  flatten_mutation_value.rs  mod.rs
src/utils/: attributes.rs  compare.rs  errors.rs  io.rs  logging.rs  mod.rs  sampling.rs
