[package]
name = "event_log_mutator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
process_mining = "0.2.8"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"]}
toml = "0.8.14"
derive-macros = { path = "derive-macros"}
thiserror = "1.0.64"
colored = "2.1.0"

[dev-dependencies]
rstest = "0.21.0"
