[package]
name = "event_log_mutator"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
itertools = "0.12.1"
process_mining = "0.3.23"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"]}
toml = "0.8.14"
derive-macros = { path = "derive-macros"}
thiserror = "1.0.64"
colored = "2.1.0"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.11.1"
dirs = "6.0.0"

[dev-dependencies]
process_mining_macros = { git = "https://github.com/cpitsch/process_mining_macros", default-features = false }
rstest = "0.21.0"
